nuevo path para nombres comerciales

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,13 @@ node_modules
 /ejemplos
 
 
+models/principio-activo.js
+models/nombre-comerciale.js
+
+controllers/nombres-comerciales.js
+controllers/principios-activos.js
+
+/routes/nombre-comercial.js
+/routes/principio-activo.js
 
 
