--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
 PORT = numero de puerto
 MONGODB_CNN = direccion de la bd de mongo
-secretOrPrivateKey = clave privada para jwt
+SECRETORPRIVATEKEY = clave privada para jwt
