subida de archivos configurada/ con cloudinary

--- a/example.env
+++ b/example.env
@@ -1,3 +1,7 @@
 PORT = numero de puerto
 MONGODB_CNN = direccion de la bd de mongo
 SECRETORPRIVATEKEY = clave privada para jwt
+CLOUDINARY_URL = clave de cloudinary
+
+GOOGLE_CLIENT_ID = par configurar google
+GOOGLE_SECRET_ID = 
